# vtables_derive

./: Cargo.toml
src/: lib.rs
tests/: tests.rs
